--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,11 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:20.1.0'
+
+    // Use JUnit test framework.
+    testImplementation 'junit:junit:4.13.2'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
@@ -27,9 +30,4 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = 'leetcode.App'
-}
-
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
 }
